# Atomix_sandbox

./: .gitignore  .gitignore.txt  CMakeList.txt  CMakeLists.txt  DEPENDENCIES.md  README.md  vcpkg.json
include/: arena.hpp  buffer.hpp  data_type.hpp  reader.hpp  security_check.hpp  system_allocator.hpp  tabular_data.hpp
src/: reader.cpp  security_check.cpp  tabular_data.cpp
test/: tabular_data_test.cpp  test_buffer.cpp
